themes/tundra/tundra.css
/*
	Adds cosmetic styling to Dijit.  Users may swap with a custom theme CSS file.
*/

@import url("../dijit.css");


.dj_safari .tundra .dijitPopup {
	/* -webkit-border-radius: 5px; */
	-webkit-box-shadow: 0px 5px 10px #adadad;
}

/*
 * Control opacity of popups
 */
.tundra .dijitPopup div,
.tundra .dijitPopup table {
	opacity: 0.95;
}

/*****
		dijit.form.Button
		dijit.form.DropDownButton
		dijit.form.ComboButton
		dijit.form.ComboBox (partial)
 *****/


.tundra .dijitButtonNode {
	/* enabled state - inner */
	/* border:1px outset #a0a0a0; */
	border:1px solid #9b9b9b;
	padding:.3em .4em .2em .4em;
	background:#e9e9e9 url("images/buttonEnabled.png") repeat-x top;
}
.dijitComboBox .dijitButtonNode,
.dijitSpinner .dijitButtonNode {
	border: 0px;
	padding: 0 .4em 0 .4em;	/* the inner node will be vertically centered automatically because it's in a <td> */
}

.dj_ie6 .tundra .dijitButtonNode {
	position:relative; 
}

.tundra .dijitA11yDownArrow,
.tundra .dijitDownArrowButton,
.tundra .dijitUpArrowButton {
	font-size: 0.75em;
	color: #848484;
}


.tundra .dijitButtonDisabled .dijitButtonNode,
.tundra .dijitToggleButtonDisabled .dijitButtonNode,
.tundra .dijitDropDownButtonDisabled .dijitButtonNode,
.tundra .dijitComboButtonDisabled .dijitButtonNode,
.tundra .dijitComboBoxDisabled,
.tundra .dijitSpinnerDisabled,
.tundra .dijitSpinnerDisabled .dijitButtonNode {
	/* disabled state - inner */
	border: 1px solid #d5d5d5;
	/*color:#b4b4b4;*/
	background:#e4e4e4 url("images/buttonDisabled.png") top repeat-x;
	opacity: 0.60; /* Safari, Opera and Mozilla */
}
.tundra .dijitButtonDisabled .dijitButtonNode *,
.tundra .dijitToggleButtonDisabled .dijitButtonNode *,
.tundra .dijitDropDownButtonDisabled .dijitButtonNode *,
.tundra .dijitComboButtonDisabled .dijitButtonNode *,
.tundra .dijitSpinnerDisabled .dijitButtonNode * {
	filter: gray() alpha(opacity=50); /* IE */
}

.tundra .dijitButtonHover .dijitButtonNode,
.tundra .dijitToggleButtonHover .dijitButtonNode,
.tundra .dijitDropDownButtonHover .dijitButtonNode,
.tundra .dijitComboButtonHover .dijitButtonContents,
.tundra .dijitComboButtonDownArrowHover .dijitDownArrowButton,
.tundra .dijitComboBoxHover .dijitDownArrowButton,
.tundra .dijitSpinnerUpArrowHover .dijitUpArrowButton,
.tundra .dijitSpinnerDownArrowHover .dijitDownArrowButton {
	/* hover state - inner */
	/* TODO: change from Hover to Selected so that button is still highlighted while drop down is being used */
	border-color:#366dba;
	color:#366dba;
	background:#f1f6fc url("images/buttonHover.png") repeat-x bottom;
}

.tundra .dijitButtonActive .dijitButtonNode,
.tundra .dijitToggleButtonActive .dijitButtonNode,
.tundra .dijitDropDownButtonActive .dijitButtonNode,
.tundra .dijitComboButtonActive .dijitButtonContents,
.tundra .dijitDownArrowActive .dijitDownArrowButton,
.tundra .dijitComboBoxActive .dijitDownArrowButton {
	/* active state - inner (for when you are pressing a normal button, or
	 * when a toggle button is in a depressed state
	 */
	border-color:#366dba;
	background: #ededed url("images/buttonActive.png") bottom repeat-x;
}

.tundra .dijitToolbar {
	border: 1px solid #9b9b9b;
	background:#e9e9e9 url("images/buttonEnabled.png") repeat-x top;
}

.tundra .dijitToolbar * {
	padding: 0px;
	margin: 0px;
	#margin-top: -1px; /*IE*/
}
.dj_ie .tundra .dijitToolbar {
	padding-bottom: 1px;
}

.tundra .dijitToolbar .dijitButtonNode {
	padding: 0px;
	margin: 0px;
	border: 1px solid transparent;
	background: none;
}
.tundra .dijitToolbar .dijitToggleButtonChecked .dijitButtonNode {
	background-color:#C1D2EE;
	border:1px solid #316AC5;
}
.tundra .dijitToolbar .dijitToggleButtonCheckedHover .dijitButtonContents {
	border-color: #366dba;
	background-color:transparent;
}
.dj_ie6 .tundra .dijitToolbar .dijitButtonNode {
	/* workaround no transparent border support in IE6*/
	border-color: #e9e9e9;
}

.tundra .dijitToolbar .dijitButtonHover .dijitButtonNode,
.tundra .dijitToolbar .dijitToggleButtonHover .dijitButtonNode,
.tundra .dijitToolbar .dijitDropDownButtonHover .dijitButtonNode {
	/* TODO: change this from Hover to Selected so that button is still highlighted while drop down is being used */
	border-color: #366dba;
}
.dijitToolbarSeparator {
	background: url('images/editor.gif');
	height: 18px;
	width: 5px;
	padding: 0px 1px 0px 1px;
	margin: 0px;
}

.tundra .dijitToolbar .dijitToolbarSeparator {
	background: url('images/editor.gif');
}

/* ComboBox-icon-specific */
.tundra .dijitComboBox .dijitDownArrowButtonChar {
	/* visibility:hidden;  */
	display:none; 
}
.dijit_a11y .dijitComboBox .dijitDownArrowButtonChar {
	display:inline; 
}
.tundra .dijitComboBox .dijitDownArrowButtonInner {
	width:16px; 
	height:16px; 
	background:url("images/arrowDown.png") no-repeat center center; 
}
.dj_ie6 .tundra .dijitComboBox .dijitDownArrowButtonInner {
	background-image:url("images/arrowDown.gif"); 
}
.tundra .dijitComboBoxHover .dijitDownArrowButtonInner {
	/* TODO: url("images/arrowDownHover.png") but in IE6 it flickers some? */
}


/*****
		dijit.form.NumberSpinner
		override for the shorter stacked buttons
 *****/

.tundra .dijitSpinner .dijitButtonNode {
	padding: 0 .4em 0 .4em;
}


/****
		dijit.form.TextBox
		dijit.form.ValidationTextBox
		dijit.form.SerializableTextBox
		dijit.form.RangeBoundTextBox
		dijit.form.NumberTextBox
		dijit.form.CurrencyTextBox
		dijit.form.NumberSpinner
		dijit.form.ComboBox (partial)
 ****/

.tundra .dijitTextBox,
.tundra .dijitComboBox,
.tundra .dijitSpinner {
	margin: 0em 0.1em 0.2em 0.1em;
}
/* ... */

