Fixes #4388: ComboBox down arrows "bleed through" overflow in IE Patch from Sam Foster (CLA on file)
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@10886 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/tundra/tundra.css
+++ b/themes/tundra/tundra.css
@@ -40,7 +40,7 @@
 }
 
 .dj_ie6 .tundra .dijitButtonNode {
-	position:relative; 
+	zoom:1; 
 }
 
 .tundra .dijitA11yDownArrow,
